# b2share-new

./: .dockerignore  .editorconfig  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.base  INSTALL.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  TESTS.md  babel.ini  devenvrc  docker-compose-dev.yml  docker-compose.full.yml  docker-services.yml  entry_points.txt  pyproject.toml  pytest.ini  requirements.txt  run-tests.sh  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.theia/: launch.json  settings.json
.tx/: config
b2share/: cli.py  config.py  factory.py  uwsgi.ini  uwsgi.py  version.py  wsgi.ini  wsgi.py  wsgi_api.ini  wsgi_ui.ini
b2share/modules/: __init__.py
b2share/records/: __init__.py  api.py  config.py  ext.py  indexer.py  permissions.py  tasks.py  views.py
b2share/theme/: __init__.py  views.py  webpack.py
docker/: build-images.sh  wait-for-services.sh
docker/haproxy/: Dockerfile  haproxy.cfg  haproxy_cert.pem
docker/nginx/: Dockerfile  nginx.conf  test.crt  test.csr
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
gui/: Dockerfile  package.json
gui/app/: index.html
poetry-files/: pyproject.toml
scripts/: bootstrap  console  server  setup  update
tests/: conftest.py  test_version.py
tests/api/: conftest.py  test_api_record_files.py
tests/e2e/: conftest.py  test_front_page.py
tests/ui/: conftest.py
webui/app/: index.html
(+69 files in other folders)
