[tool.poetry]
name = "b2share-new"
version = "0.0.1"
description = ""
authors = ["Harry Kodden <harry.kodden@surf.nl>", "Jussi Steenari <jussi.steenari@csc.fi>", "Harri Hirvonsalo <harri.hirvonsalo@csc.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
# Babel = ">=2.4.0"
# Flask-BabelEx = ">=0.9.3"
invenio = {version = ">=3.3.0,<3.4.0", extras = ["base", "auth", "metadata", "files", "postgresql", "elasticsearch7" ]}
#lxml = ">=3.5.0,<4.2.6"
# marshmallow = ">=3.0.0,<4.0.0"
#kombu = "<5.0,>=4.0.2"
#celery = "<5.0"    
#invenio-i18n = "<1.3.0,>=1.2.0"

[tool.poetry.dev-dependencies]
check-manifest = ">=0.35"
coverage = ">=4.4.1"
isort = ">=4.3"
mock = ">=2.0.0"
pydocstyle = ">=2.0.0"
pytest = ">=3.3.1"
pytest-cov = ">=2.5.1"
#pytest-invenio = ">=1.2.1,<1.3.0"
pytest-mock = ">=1.6.0"
pytest-pep8 = ">=1.0.6"
pytest-random-order = ">=0.5.4"
pytest-runner = ">=3.0.0,<5"
Sphinx = ">=1.5.1"
Flask-Testing = "*"
responses = ">=0.5.1,<=0.10.6"
Flask-KVSession = "<0.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

